Bug 42233 - Telepathy-glib uses deprecated GLib API (breaks build from jhbuild)
Summary: Telepathy-glib uses deprecated GLib API (breaks build from jhbuild)
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-25 09:30 UTC by Travis Reitter
Modified: 2011-10-31 04:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Replace deprecated g_unix_socket_* functions (3.01 KB, patch)
2011-10-25 09:30 UTC, Travis Reitter
Details | Splinter Review

Description Travis Reitter 2011-10-25 09:30:36 UTC
Created attachment 52754 [details] [review]
Replace deprecated g_unix_socket_* functions

I just tried building telepathy-glib git master from jhbuild and it failed due to deprecated functions (and the fact that -Werror=deprecated-declarations kicked them up to errors):

gnio-util.c: In function 'tp_g_socket_address_from_variant':
gnio-util.c:120:13: error: 'g_unix_socket_address_new_abstract' is deprecated (declared at /opt/gnome/include/gio-unix-2.0/gio/gunixsocketaddress.h:60): Use 'g_unix_socket_address_new_with_type' instead [-Werror=deprecated-declarations]
gnio-util.c: In function 'tp_address_variant_from_g_socket_address':
gnio-util.c:210:13: error: 'g_unix_socket_address_get_is_abstract' is deprecated (declared at /opt/gnome/include/gio-unix-2.0/gio/gunixsocketaddress.h:71) [-Werror=deprecated-declarations]
cc1: all warnings being treated as errors
Comment 1 Will Thompson 2011-10-28 10:44:28 UTC
Comment on attachment 52754 [details] [review]
Replace deprecated g_unix_socket_* functions

Review of attachment 52754 [details] [review]:
-----------------------------------------------------------------

Looks good except for a style point.

::: telepathy-glib/gnio-util.c
@@ +213,2 @@
>                  type = TP_SOCKET_ADDRESS_TYPE_ABSTRACT_UNIX;
> +              }

If you're going to add {} around one branch of the conditional, you should add them around the other, too.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.