Replace deprecated g_unix_socket_* functions.

https://bugs.freedesktop.org/show_bug.cgi?id=42233